--- a/css/styles.css
+++ b/css/styles.css
@@ -6,6 +6,7 @@ body{
 }
 
 
+
 h1{
   color: #66BFBF;
   margin-top: 50px;
@@ -42,6 +43,8 @@ hr {
   border-color: #11999E;
   border-width: 5px;
   opacity: 25%;
+  clear: both;
+
 }
 
   .top-container {
@@ -64,6 +67,7 @@ hr {
   align-items: center;
   width: 50%;
   margin: auto;
+  padding: 5%;
 }
 .circular{
   border-radius: 100%;
@@ -86,6 +90,32 @@ hr {
 .skills-row{
   text-align: left;
 }
+.contact-container{
+  padding: 5%;
+}
+.btn {
+  -webkit-border-radius: 9;
+  -moz-border-radius: 9;
+  border-radius: 9px;
+  text-shadow: 1px 1px 9px #2cbfc9;
+  font-family: 'Montserrat', sans-serif;
+  color: #ffffff;
+  font-size: 20px;
+  background: #11999E;
+  padding: 10px 20px 10px 20px;
+  text-decoration: none;
+}
+
+.btn:hover {
+  background: #66BFBF;
+  text-decoration: none;
+}
+.footer{
+  align-items: center;
+  background-color: #66BFBF;
+margin: 0 auto;
+padding: 3%
+}
 #raj-img{
   margin-top: 5%;
   width: 30%;
@@ -103,4 +133,7 @@ hr {
 #intro-msg{
   margin-top: 50px;
   margin-bottom: 70px;
+}
+#copyright{
+  color: #EAF6F6;
 }
